# Interceptor

./: .bettercodehub.yml  .editorconfig  .gitignore  .travis.yml  CMakeLists.txt  Dockerfile  README.md  global.h.in  vars.h.in
cmake/: FindFam.cmake  filetostring.cmake
cmake/lib/: interceptor_http-debug.cmake  interceptor_http.cmake
config/: config.json  interceptor.service
scripts/: indent.sh  index.html  mem.sh  plot.script  plot.sh  request.sh
src/: CMakeLists.txt  Config.cpp  Config.h  Defs.h  FileUtils.cpp  FileUtils.h  Http.h  HttpHeaders.cpp  HttpHeaders.h  HttpReply.cpp  HttpReply.h  HttpRequest.cpp  HttpRequest.h  InboundConnection.cpp  InboundConnection.h  Interceptor.cpp  Interceptor.h  InterceptorSession.cpp  InterceptorSession.h  Logger.cpp  Logger.h  Main.cpp  Main.h  OutboundConnection.cpp  OutboundConnection.h  Server.cpp  Utils.cpp  Utils.h  config.json  main.cpp
src/authentication/: AbstractAuthentication.cpp  AbstractAuthentication.h  Authentication.h  AuthenticationLoader.cpp  AuthenticationLoader.h  BasicAuthentication.cpp  BasicAuthentication.h  CMakeLists.txt  defs.h
src/backend/: Backend.h  BackendConnector.cpp  BackendConnector.h  BackendReply.cpp  BackendReply.h  BackendsPool.cpp  BackendsPool.h  CMakeLists.txt  defs.h
src/cache/: .BasicCacheHandler.cpp.swp  .FileDatabase.h.swp  AbstractCacheHandler.h  AbstractDatabase.h  AbstractListener.h  BasicCacheHandler.cpp  BasicCacheHandler.h  CMakeLists.txt  CacheHandler.cpp  CacheHandler.h  CacheListener.cpp  CacheListener.h  CacheMonitor.cpp  CacheMonitor.h  Event.h  FileDatabase.cpp  FileDatabase.h  FileMetadataDatabase.cpp  FileMetadataDatabase.h  MonitorListener.cpp  MonitorListener.h  Subject.cpp  Subject.h  fwd.h  generic_cache.h
src/common/: AbstractSessionHandler.cpp  AbstractSessionHandler.h  Buffer.cpp  Buffer.h  CMakeLists.txt  Defs.h  FileBuffer.cpp  FileBuffer.h  InterceptorException.h  Packet.h  Params.h  Redirection.cpp  Redirection.h  defs.h
src/core/: CMakeLists.txt  Config.cpp  Config.h  Interceptor.cpp  Interceptor.h  InterceptorSession.cpp  InterceptorSession.h  SSLSessionConnection.cpp  SSLSessionConnection.h  Server.cpp  Server.h  Session.cpp  Session.h  SessionConnection.cpp  SessionConnection.h  SessionTypeDetector.cpp  SessionTypeDetector.h  defs.h
src/gateway/: AbstractConnector.h  AbstractGateway.cpp  AbstractGateway.h  BackendGateway.cpp  BackendGateway.h  CMakeLists.txt  GatewayHandler.cpp  GatewayHandler.h  defs.h
src/http/: .CommonReply.cpp.swp  .GetReply.h.swp  AuthenticationReply.cpp  AuthenticationReply.h  CMakeLists.txt  CommonReply.cpp  CommonReply.h  DirectoryListingReply.cpp  DirectoryListingReply.h  Encoder.cpp  Encoder.h  ErrorReply.cpp  ErrorReply.h  GetReply.cpp  GetReply.h  HTTP11SessionHandler.cpp  HTTP11SessionHandler.h  HTTP1XSessionHandler.cpp  HTTP1XSessionHandler.h  HTTP2SessionHandler.cpp  HTTP2SessionHandler.h  HTTP2SessionUpgrader.cpp  HTTP2SessionUpgrader.h  HeadReply.cpp  HeadReply.h  Headers.cpp  Headers.h  Http.cpp  Http.h  Http11SessionHandler.cpp  Http11SessionHandler.h  Http2UpgradeReply.h  HttpBuffer.h  HttpException.h  HttpHeaders.cpp  HttpHeaders.h  HttpReply.cpp  HttpReply.h  HttpRequest.cpp  HttpRequest.h  (+9 more)
src/http/html/: header.html.in
src/http/http2/: CMakeLists.txt  Http2SessionHandler.cpp  Http2SessionHandler.h  Http2SessionUpgrader.cpp  Http2SessionUpgrader.h  Http2UpgradeReply.cpp
src/module-example/: CMakeLists.txt  HelloWorldModule.cpp  HelloWorldModule.h
src/modules/: AbstractModule.cpp  AbstractModule.h  CMakeLists.txt  Module.h  ModulesLoader.cpp  ModulesLoader.h  defs.h
src/socket/: CMakeLists.txt  InboundConnection.cpp  InboundConnection.h  OutboundConnection.cpp  OutboundConnection.h  SSLInboundConnection.cpp  SSLInboundConnection.h  defs.h
src/utils/: CMakeLists.txt  FileBuffer.cpp  FileBuffer.h  FileUtils.cpp  FileUtils.h  Logger.cpp  Logger.h  Server.cpp  Server.h  ServerInfo.cpp  ServerInfo.h  StringUtils.cpp  StringUtils.h
tests/: config.json  index.html  my_utils.py  test.py  test_invalid.py  test_invalidbackend.py  test_load.py  test_load_backend.py  test_loadbackend.py  test_lowlevel.py  test_valid.py  test_validbackend.py
tests/error/: 400.html
tests/site1/: lorem.html
tests/site2/: index.html
